hphp/test/slow/readonly/basel.hhas.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Local y must be a value type.' in %s/basel.hhas:8
%A
